# SecureBackup

./: CHANGELOG.md  CLAUDE.md  DEFINITIONS.md  DEVELOPMENT_LOG.md  README.md  STATUS.md  TASKS.md
.claude/: settings.json
.claude/rules/: CRITICAL_PROGRESS_NOTICE.md  db-operations-mandatory.md  naming-trademark-check.md  progress-definition-critical.md  quality-standards.md  release-quality-audit.md  release-verification.md  uiux-excellence.md  visual-verification-mandatory.md
.claude/tmp/: claude_raw_SecureBackup-info-competitor-20260119_20260119_060005.txt  claude_raw_SecureBackup-info-sns_trends-20260117_20260117_233006.txt  claude_raw_SecureBackup-info-sns_trends-20260118_20260118_140216.txt  claude_raw_SecureBackup-info-tech_trends-20260121_20260121_095318.txt  claude_raw_securebackup-auto-202601172107_20260117_215533.txt  claude_raw_securebackup-auto-202601172345_20260118_111505.txt  claude_raw_securebackup-release-fix-202601181930_20260118_201505.txt  claude_raw_uiux-excellence-securebackup-202601181300_20260118_214609.txt  claude_stdout_SecureBackup-info-competitor-20260119_20260119_060005.txt  claude_stdout_SecureBackup-info-sns_trends-20260118_20260118_140216.txt  (+10 more)
app/: index.html  package-lock.json  package.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/backup/: executor.rs  manifest.rs  mod.rs  restore.rs  scanner.rs
app/src-tauri/src/commands/: mod.rs
app/src-tauri/src/crypto/: mod.rs
docs/: index.html  robots.txt  sitemap.xml  social-posts.md
(+7 files in other folders)
