[package]
name = "secure-backup"
version = "0.1.1"
description = "差分・暗号化バックアップツール - 大切なデータを安全に自動バックアップ"
authors = ["mmasu"]
edition = "2021"

[lib]
name = "secure_backup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 暗号化
aes-gcm = "0.10"
rand = "0.8"

# ハッシュ（差分検出用）
blake3 = "1"

# 圧縮
zstd = "0.13"

# 非同期処理
tokio = { version = "1", features = ["full"] }

# 日時
chrono = { version = "0.4", features = ["serde"] }

# ファイル操作
walkdir = "2"

# エラーハンドリング
thiserror = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"

